@@ -11,7 +11,7 @@
 	<label for="extension">
 		<f:translate key="showExtensionDocumentation">Show documentation of extension:</f:translate>
 	</label>
-	<s:form.select id="extension" name="extension" prependOptionLabel="" options="{extensions}" value="{currentExtension}" onchange="this.form.submit();" />
+	<s:form.select id="extension" name="extension" groupOptions="1" prependOptionLabel="" options="{extensions}" value="{currentExtension}" onchange="this.form.submit();" />
 
 	<label for="layout">
 		<f:translate key="documentationFormat">Layout:</f:translate>
