@@ -1,5 +1,6 @@
 2013-06-08  Xavier Perseguers  <xavier@causal.ch>
 
+	* [TASK] Group extensions by type (S, L, G)
 	* [BUGFIX] #48946: sphinx-build symlink resolving fails for relative paths (thanks to Christian Weiske)
 	* [BUGFIX] #48945: System wide detection does not work on Debian (thanks to Christian Weiske)
 	* [TASK] #48958: Documentation template for new project should match TYPO3 documentation
